--- a/Web/scheduling/web/department_new.html
+++ b/Web/scheduling/web/department_new.html
@@ -99,8 +99,8 @@
                     </el-col>
                     <el-col :span="8">
                         <el-button-group style="width:600px">
-                            <el-button icon="el-icon-search" type="primary" :disabled="loading" @click="getList">查询</el-button>
-                            <el-button icon="el-icon-refresh" type="primary" :disabled="loading" @click="getList">刷新</el-button>
+                            <el-button icon="el-icon-search" type="primary" :disabled="loading" @click="getList('查询')">查询</el-button>
+                            <el-button icon="el-icon-refresh" type="primary" :disabled="loading" @click="getList('刷新')">刷新</el-button>
                             <el-button icon="el-icon-circle-plus-outline" type="primary" @click="deptVisible = true">添加</el-button>
                             <el-button icon="el-icon-video-camera" type="primary" onclick="watchVideo()"></el-button>
                         </el-button-group>
@@ -199,7 +199,7 @@
                     :total="total"
                     :page-size="size"
                     :hide-on-single-page="total <= size" 
-                    @current-change="getList"
+                    @current-change="getList('刷新')"
                     style="margin-top: 10px"
                 ></el-pagination>
             </el-main>
@@ -324,8 +324,12 @@
                 },
             },
             methods: {
-                getList: function () {
+                getList: function (type) {
                     var _this = this;
+                    if (type == '刷新') {
+                        _this.department_name = "";
+                        _this.view_name = "";
+                    }
                     _this.loading = true;
                     axios.post(myUrl('department_new/departmentList'), {
                         nowPage: _this.now,
@@ -368,7 +372,7 @@
                                 //_this.total = res.data.total
                                 // _this.list = res.data.pageList
                                 _this.deptVisible= false,
-                                _this.getList();
+                                _this.getList('刷新');
                             }
                             if (res.code == 500) {
                                 _this.$notify({
@@ -425,7 +429,7 @@
                                 title: res.msg,
                                 type: 'success'
                             });
-                            _this.getList();
+                            _this.getList('刷新');
                         }
                         if (res.code == 500) {
                             _this.$notify({
@@ -454,7 +458,7 @@
                                         title: res.msg,
                                         type: 'success'
                                     });
-                                    _this.getList();
+                                    _this.getList('刷新');
                                    // _this.$refs.addDrawer.closeDrawer();
                                 }
                                 if (res.code == 500) {
@@ -478,7 +482,7 @@
             },
 
             mounted: function () {
-                this.getList();
+                this.getList('刷新');
             }
         })
     </script>
