--- a/Web/scheduling/web/paibanbiao_renyuan.html
+++ b/Web/scheduling/web/paibanbiao_renyuan.html
@@ -99,8 +99,8 @@
                     </el-col>
                     <el-col :span="8">
                         <el-button-group style="width:600px">
-                            <el-button icon="el-icon-search" type="primary" :disabled="loading" @click="getList">查询</el-button>
-                            <el-button icon="el-icon-refresh" type="primary" :disabled="loading" @click="getList">刷新</el-button>
+                            <el-button icon="el-icon-search" type="primary" :disabled="loading" @click="getList('查询')">查询</el-button>
+                            <el-button icon="el-icon-refresh" type="primary" :disabled="loading" @click="getList('刷新')">刷新</el-button>
                             <el-button icon="el-icon-circle-plus-outline" type="primary" @click="addVisible = true;">添加</el-button>
                             <el-button icon="el-icon-video-camera" type="primary" onclick="watchVideo()"></el-button>
                         </el-button-group>
@@ -175,7 +175,7 @@
                     :total="total"
                     :page-size="size"
                     :hide-on-single-page="total <= size" 
-                    @current-change="getList"
+                    @current-change="getList('刷新')"
                     style="margin-top: 10px"
                 ></el-pagination>
             </el-main>
@@ -270,8 +270,12 @@
                 },
             },
             methods: {
-                getList: function () {
+                getList: function (type) {
                     var _this = this;
+                    if (type == "刷新") {
+                        _this.staff_name = "";
+                        _this.staff_banci = "";
+                    }
                     _this.loading = true;
                     axios.post(myUrl('renyuan/getList'), {
                         nowPage: _this.now,
