--- a/Web/scheduling/web/userInfo.html
+++ b/Web/scheduling/web/userInfo.html
@@ -96,8 +96,8 @@
                     </el-col>
                     <el-col :span="8">
                         <el-button-group style="width:600px">
-                            <el-button icon="el-icon-search" type="primary" :disabled="loading" @click="getList">查询</el-button>
-                            <el-button icon="el-icon-refresh" type="primary" :disabled="loading" @click="getList">刷新</el-button>
+                            <el-button icon="el-icon-search" type="primary" :disabled="loading" @click="getList('查询')">查询</el-button>
+                            <el-button icon="el-icon-refresh" type="primary" :disabled="loading" @click="getList('刷新')">刷新</el-button>
                             <el-button icon="el-icon-circle-plus-outline" type="primary" @click="addVisible = true">添加</el-button>
                             <el-button icon="el-icon-video-camera" type="primary" onclick="watchVideo()"></el-button>
                         </el-button-group>
@@ -158,7 +158,7 @@
                     :total="total"
                     :page-size="size"
                     :hide-on-single-page="total <= size" 
-                    @current-change="getList"
+                    @current-change="getList('刷新')"
                     style="margin-top: 10px"
                 ></el-pagination>
             </el-main>
@@ -236,8 +236,11 @@
                  },
              },
              methods: {
-                 getList: function () {
+                 getList: function (type) {
                      var _this = this;
+                     if (type == "刷新") {
+                         _this.user_code = "";
+                     }
                      _this.loading = true;
                      axios.post(myUrl('user/getList'), {
                          user_code: _this.user_code,
@@ -277,7 +280,7 @@
                                      });
                                      _this.deptVisible = false,
                                      _this.addVisible = false,
-                                     _this.getList();
+                                     _this.getList('刷新');
                                      
                                  }
                                  if (res.code == 500) {
@@ -335,7 +338,7 @@
                                  title: res.msg,
                                  type: 'success'
                              });
-                             _this.getList();
+                             _this.getList('刷新');
                          }
                          if (res.code == 500) {
                              _this.$notify({
@@ -364,7 +367,7 @@
                                          title: res.msg,
                                          type: 'success'
                                      });
-                                     _this.getList();
+                                     _this.getList('刷新');
                                      // _this.$refs.addDrawer.closeDrawer();
                                  }
                                  if (res.code == 500) {
@@ -388,7 +391,7 @@
              },
 
              mounted: function () {
-                 this.getList();
+                 this.getList('刷新');
              }
          })
     </script>
