--- a/Web/scheduling/web/work.html
+++ b/Web/scheduling/web/work.html
@@ -38,6 +38,9 @@
         $(function () {
             $.session.set('type', '排产1');
         })
+        $(function () {
+            $.session.set('type', '排产2');
+        })
 
         function watchVideo() {
             $(".videoCanvas").show();
