--- a/Web/scheduling/web/paiban_detail.html
+++ b/Web/scheduling/web/paiban_detail.html
@@ -76,7 +76,7 @@
           /*display: none;*/
         }
         .el-table {
-            position: absolute;
+            /*position: absolute;*/
             min-width: 1300px;
             overflow: auto;
         }
