--- a/Web/scheduling/web/paibanbiao_renyuan.html
+++ b/Web/scheduling/web/paibanbiao_renyuan.html
@@ -332,6 +332,14 @@
                                     });
                                 }
                                 _this.loading = false;
+
+                                this.paibanbiao_renyuan.staff_name = ""
+                                this.paibanbiao_renyuan.phone_number = ""
+                                this.paibanbiao_renyuan.id_number
+                                this.paibanbiao_renyuan.department_name = ""
+                                this.paibanbiao_renyuan.banci = ""
+
+
                             }).catch(function (err) {
                                 _this.$notify.error({
                                     title: err.msg
