--- a/Web/scheduling/web/paiban_detail.html
+++ b/Web/scheduling/web/paiban_detail.html
@@ -89,12 +89,12 @@
     <span class="video-shut" id="video-shut" onclick="close_video()">
         <img src="static/img/close.png" style="width: 28px; height: 28px;" >
     </span>
-        <video id="video" controls src="static/video/排班及排班明细.mp4" width="700" height="400"></video>
+        <video id="video" controls src="./static/video/排班及排班明细.mp4" width="700" height="400"></video>
     </div>
 
     <div id="paiban_detail" style="display: none;" :style="{display: 'block'}">
         <el-container>
-            <el-main style="position: relative;overflow: auto;height:453px">
+            <el-main style="position: relative;overflow: auto">
                 <el-row :gutter="10" style="margin-bottom: 20px">
                     <el-col :span="6">
                         <el-input v-model="staff_name" placeholder="查询姓名" clearable></el-input>
@@ -208,6 +208,11 @@
                         department_name: '部门',
                         b: '班次',
                         c: '日期',
+                    }
+                    console.log(this.detailList)
+                    var list = this.detailList
+                    for (var i = 0; i < list.length; i++) {
+                        list[i].id_number = "'" + list[i].id_number
                     }
                     exportExcel(this.detailList, columns, '排班明细');
                 },
