--- a/Web/scheduling/web/work.html
+++ b/Web/scheduling/web/work.html
@@ -116,13 +116,13 @@
     <span class="video-shut" id="video-shut" onclick="close_video()">
         <img src="static/img/close.png" style="width: 28px; height: 28px;" >
     </span>
-        <video id="video" controls src="static/video/排产.mp4" width="700" height="400"></video>
+        <video id="video" controls src="./static/video/排产.mp4" width="700" height="400"></video>
     </div>
 
     <input type="text" hidden="hidden" id="type" value="排产1" />
     <div id="work" class="work" >
         <el-container>
-            <el-main style="position: relative;overflow: auto;height:453px" >
+            <el-main style="position: relative;overflow: auto" >
                 <el-row :gutter="10" style="margin-bottom: 20px">
                     <el-col :span="11">
                         <el-button-group style="width:950px">
