--- a/Web/scheduling/web/bom.html
+++ b/Web/scheduling/web/bom.html
@@ -50,7 +50,7 @@
     <span class="video-shut" id="video-shut" onclick="close_video()">
         <img src="static/img/close.png" style="width: 28px; height: 28px;" >
     </span>
-        <video id="video" controls src="static/video/bom.mp4" width="700" height="400"></video>
+        <video id="video" controls src="./static/video/bom.mp4" width="700" height="400"></video>
     </div>
 
     <div id="bom" style="display: none;" :style="{display: 'block'}">
