--- a/Web/scheduling/web/check.html
+++ b/Web/scheduling/web/check.html
@@ -83,7 +83,7 @@
     <span class="video-shut" id="video-shut" onclick="close_video()">
         <img src="static/img/close.png" style="width: 28px; height: 28px;" >
     </span>
-        <video id="video" controls src="static/video/排产核对.mp4" width="700" height="400"></video>
+        <video id="video" controls src="./static/video/排产核对.mp4" width="700" height="400"></video>
     </div>
 
     <div id="order_check" style="display: none;" :style="{display: 'block'}">
