--- a/Web/scheduling/web/department_new.html
+++ b/Web/scheduling/web/department_new.html
@@ -76,7 +76,7 @@
           /*display: none;*/
         }
         .el-table {
-            position: absolute;
+            /*position: absolute;*/
             min-width: 1300px;
             overflow: auto;
         }
@@ -89,12 +89,12 @@
     <span class="video-shut" id="video-shut" onclick="close_video()">
         <img src="static/img/close.png" style="width: 28px; height: 28px;" >
     </span>
-        <video id="video" controls src="static/video/部门.mp4" width="700" height="400"></video>
+        <video id="video" controls src="./static/video/部门.mp4" width="700" height="400"></video>
     </div>
 
   <div id="department" style="display: none;" :style="{display: 'block'}">
         <el-container>
-            <el-main style="position: relative;overflow: auto;height:453px">
+            <el-main style="position: relative;overflow: auto">
                 <el-row :gutter="10" style="margin-bottom: 20px">
                     <el-col :span="6">
                         <el-input v-model="department_name" placeholder="部门名称" clearable></el-input>
