--- a/Web/scheduling/web/paibanbiao_renyuan.html
+++ b/Web/scheduling/web/paibanbiao_renyuan.html
@@ -76,7 +76,7 @@
           /*display: none;*/
         }
         .el-table {
-            position: absolute;
+            /*position: absolute;*/
             min-width: 1300px;
             overflow: auto;
         }
@@ -89,12 +89,12 @@
     <span class="video-shut" id="video-shut" onclick="close_video()">
         <img src="static/img/close.png" style="width: 28px; height: 28px;" >
     </span>
-        <video id="video" controls src="static/video/人员信息.mp4" width="700" height="400"></video>
+        <video id="video" controls src="./static/video/人员信息.mp4" width="700" height="400"></video>
     </div>
 
     <div id="paibanbiao_renyuan" style="display: none;" :style="{display: 'block'}">
         <el-container>
-            <el-main style="position: relative;overflow: auto;height:453px">
+            <el-main style="position: relative;overflow: auto">
                 <el-row :gutter="10" style="margin-bottom: 20px">
                     <el-col :span="6">
                         <el-input v-model="staff_name" placeholder="姓名" clearable></el-input>
@@ -113,6 +113,7 @@
                 </el-row>
                 <el-table
                     :data="list"
+                    :max-height="tableHeight"
                     v-loading="loading"    
                     style="width: 100%;margin-top: 10px;font-size:15px"
                 >
@@ -263,7 +264,7 @@
                 department: [],
                 staff_name: '',
                 staff_banci:'',
-
+                tableHeight:'',
                 paibanbiao_renyuan: {},
                 rules: {
                     staff_name: [
@@ -275,6 +276,9 @@
                 },
             },
             methods: {
+
+
+
                 getList: function (type) {
                     var _this = this;
                     if (type == "刷新") {
@@ -448,6 +452,7 @@
             mounted: function () {
                 this.getList();
                 this.getDepartment();
+                this.tableHeight = window.innerHeight - 1090;
             }
         })
     </script>
